unpackaged/main/default/objects/Billing_Configuration_Detail__c/Billing_Configuration_Detail__c.object-meta.xml
<CustomObject>
    <label>Billing Configuration Detail</label>
    <nameField>
        <displayFormat>BCD-{0000000000}</displayFormat>
        <label>Billing Configuration Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Configuration Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>