unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/Billing_Account__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>Billing_Account__c</referenceTo>
    <relationshipLabel>Billing Configuration Details</relationshipLabel>
    <relationshipName>Billing_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>