unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/Billing_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Billing_Configuration__c</fullName>
    <label>Billing Configuration</label>
    <referenceTo>Billing_Configuration__c</referenceTo>
    <relationshipLabel>Billing Configuration Details</relationshipLabel>
    <relationshipName>Billing_Configuration_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>