unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/Billing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Billing_Notes__c</fullName>
    <label>Billing Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>