unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/CEM_Id__c.field-meta.xml
<CustomField>
    <fullName>CEM_Id__c</fullName>
    <label>CEM Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>