unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/Dimension_1__c.field-meta.xml
<CustomField>
    <fullName>Dimension_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 1</label>
    <referenceTo>c2g__codaDimension1__c</referenceTo>
    <relationshipLabel>Billing Configuration Details</relationshipLabel>
    <relationshipName>Billing_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>