unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/Dimension_2__c.field-meta.xml
<CustomField>
    <fullName>Dimension_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dimension 2</label>
    <referenceTo>c2g__codaDimension2__c</referenceTo>
    <relationshipLabel>Billing Configuration Details</relationshipLabel>
    <relationshipName>Billing_Configuration_Details</relationshipName>
    <type>Lookup</type>
</CustomField>