unpackaged/main/default/objects/Billing_Configuration_Detail__c/fields/Don_t_Add_Processor_Information__c.field-meta.xml
<CustomField>
    <fullName>Don_t_Add_Processor_Information__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don&#39;t Add Processor Information</label>
    <type>Checkbox</type>
</CustomField>